# WindscribeGUI

./: README.md  pyproject.toml
data/share/applications/: windscribe.desktop
windscribegui/: dialog.py  dialog.ui  main.py
