[tool.poetry]
name = "WindscribeGUI"
version = "0.1.0"
description = "Qt 5/6 based GUI for Windscribe VPN written in Python"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]

[tool.poetry.dependencies]
click = "^8.0.4"
PyQt5 = { version = "^5.15.6", optional = true }
PyQt6 = { version = "^6.2.3", optional = true }
python = ">=3.9,<4.0"
QtPy = "^2.0.1"
windscribe = { git = "https://github.com/shaybox/windscribe.git" }

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
PyQt5 = ["PyQt5"]
PyQt6 = ["PyQt6"]

[tool.poetry.scripts]
windscribegui = "windscribegui.main:main"

[tool.black]
line-length = 120
